# pyspextool

./: .coverage  .gitignore  .gitmodules  LICENSE  README.md  batch_cl.py  codecov.yml  environment.yml  kelle_test.py  loopprogress.py  mc_bitset.py  mc_combflagstack.py  mc_gethdrinfo.py  mc_imgpoly.py  mc_polyfit1d.py  mc_robustpoly1d.py  pyproject.toml  requirements.txt  setup.py
data/: atran100.fits  atran1000.fits  atran3000.fits  atran400.fits  atran500.fits  atran600.fits  atran60000.fits  atran700.fits  atran75000.fits
notebooks/: Cushing.ipynb  Old Spex SXD Extraction Tutorial.ipynb  batch_testing_adam.ipynb  merge-orders-example.ipynb  spex-prism-example.ipynb  spex-sxd-example.ipynb  uspex-prism-example.ipynb  uspex-sxd-example.ipynb
paper/: paper.bib  paper.md
pyspextool/: avehdrs.py  bicucof.py  bicuval.py  bitset.py  bufrange.py  check_dir.py  check_exist.py  check_file.py  combflagstack.py  dictaddentry.py  extr_xs1dxd.py  findidx.py  findorders.py  fiterpolate.py  fitpeak1d.py  forprint.py  fsextract.py  gethdrinfo.py  getimgrange.py  getspecpixshift.py  getyrange.py  idlrotate.py  imgpoly.py  imgquadfit.py  make_uspex_flat.py  mc_bitset.py  mc_combflagstack.py  medcomb.py  mkapmask.py  mkfullpath.py  mkimgidxs.py  moments.py  nantrim.py  normspecflat.py  poly2d.py  polyfit1d.py  polyfit2d.py  readflat.py  readflatcalfile.py  readflatinfo.py  (+19 more)
tests/: TEST_TELLURIC_README.md  conftest.py  test_add_entry.py  test_arrays.py  test_avehdrs.py  test_batch.py  test_bicucof.py  test_bicuval.py  test_bitset.py  test_cal.py  test_combflagstack.py  test_combine.py  test_coords.py  test_dictaddentry.py  test_files.py  test_findorders.py  test_fitpeak.py  test_fits.py  test_fitsutils.py  test_fsextract.py  test_functions.py  test_get_spectra_positions.py  test_idlrotate.py  test_image.py  test_imgpoly.py  test_imports.py  test_interpolate.py  test_ioutils.py  test_irplanck.py  test_limits.py  test_locate_orders.py  test_make_flat.py  test_make_wavecal.py  test_math.py  test_math_mike.py  test_medstack.py  test_merge_spectra.py  test_mkimgidxs.py  test_notebooks.py  test_override_aperturesigns.py  (+18 more)
(+473 files in other folders)
