[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspextool"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy",
    "scipy",
    "matplotlib",
    "numpy",
    "importlib_resources; python_version < '3.9'",
    "git-lfs",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.dat","*.fits"] # includes the data files in instrument_data/ and data/
